spacing fixes

--- a/css/page.css
+++ b/css/page.css
@@ -130,6 +130,9 @@ header {
 header section {
   height: 80px;
 }
+section {
+  margin-bottom: 4em;
+}
 #masthead {
   margin-top: 1.3em;
 }
