--- a/less/sitewide.less
+++ b/less/sitewide.less
@@ -53,6 +53,9 @@ header {
 
 }
 
+section {
+    margin-bottom: 4em;
+}
 
 #masthead {
     margin-top: 1.3em;
